--- a/Movie Ranking Website/Movies.html
+++ b/Movie Ranking Website/Movies.html
@@ -26,7 +26,7 @@
             <h3>Inception</h3>
         </li>
         <img src="Images/inception.jpg" width="500" alt="Man standing facing forward with a gun in his hand" />
-        <p>Now this movie is AMAZING. The actors, directors, special effe It will make you see dreams and reality
+        <p>Now this movie is AMAZING. The actors, directors, special effects and story line are all top tier. It will make you see dreams and reality
             differently.</p>
         <li>
             <h3>The Social Network</h3>
