--- a/Movie Ranking Website/Home.html
+++ b/Movie Ranking Website/Home.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>RANKS</title>
+    <link rel="stylesheet" href="./stl.css"/>
 </head>
 
 <body>
-    <h1>Kundai's Lists </h1>
+    <h1>RANKS</h1>
     <p>Welcome to the website made for movie,series and video game junkies.<br />Here you will find lists for a variety
         of things.<br />Just hit any of the following links and enjoy.</p>
     <ol>
@@ -17,6 +18,12 @@
         <li><a href="./Actors.html">Top actors and actresses</a></li>
         <li><a href="./Games.html">Top games</a></li>
     </ol>
+    <hr>
+    <footer>
+        <p>
+            &COPY;ICD
+        </p>
+    </footer> 
 
 </body>
 
