--- a/Movie Ranking Website/Games.html
+++ b/Movie Ranking Website/Games.html
@@ -4,10 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Games</title>
+        <link rel="stylesheet" href="./stl.css"/>
     </head>
     <body>
-
+        <hr>
+        <footer>
+            <p>
+                &COPY;ICD
+            </p>
+        </footer> 
     </body>
 
 </html>
-
