--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mr Ndemera's Portfolio</title>
+        <link rel="stylesheet" href="./s.css"/>
     </head>
     <body>
+        <header>
         <h1>Kundai Joel Ndemera's Portfolio</h1>
+        </header>
         <h2>Here's a glimpse at my work</h2>
         <hr />
         <ol>
@@ -22,8 +25,12 @@
                 <img src="./images/Screenshot 2024-01-04 145942.png" width="300" />
             </p>
         </ol>
-        <hr />
-        <a href="./About.html">About</a>
-        <a href="./contact.html">Contact me</a>
+        <hr>
+        <footer>
+            <a href="./About.html">About</a>
+            <a href="./contact.html">Contact me</a>
+            <br>
+            <p class="copyright">&copy;ICD</p>
+        </footer>
     </body>
 </html>
