--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="eng">
     <head>
@@ -8,29 +9,33 @@
         <link rel="stylesheet" href="./s.css"/>
     </head>
     <body>
-        <header>
+        <header id="top">
         <h1>Kundai Joel Ndemera's Portfolio</h1>
         </header>
-        <h2>Here's a glimpse at my work</h2>
-        <hr />
-        <ol>
-            <li><h2><a href="./Movie Ranking Website/Home.html">Ranking Website</a></h2></li>
-        <p>
-            This is one of my first ever project.<br /> The process of making this was both fun and difficult.<br />
-            <img src="./images/Screenshot 2024-01-04 145638.png" width="300"/>
-        </p>
-            <li><h2><a href="./Birthday Invite.html">Birthday Invite</a></h2></li>
-            <p>
-                Just a basic invite page. We all love birthday parties.<br />
-                <img src="./images/Screenshot 2024-01-04 145942.png" width="300" />
-            </p>
-        </ol>
+        <main class="main">
+            <hr>
+            <h2 class="main">Here's a glimpse at my work</h2>
+            
+            <ol class="main">
+                <li><h2 class="main"><a href="./Movie Ranking Website/Home.html">Ranking Website</a></h2></li>
+                <p class="main">
+                This is one of my first ever project.<br /> The process of making this was both fun and difficult.<br />
+                <a href="./Movie Ranking Website/Home.html"><img src="./images/Screenshot 2024-01-20 231340.png" width="300"/></a>
+                </p>
+                <li><h2 class="main"><a href="./Birthday Invite.html">Birthday Invite</a></h2></li>
+                <p class="main">
+                    Just a basic invite page. We all love birthday parties.<br />
+                    <a href="./Birthday Invite.html"><img src="./images/Screenshot 2024-01-04 145942.png" width="300" /></a>
+                </p>
+            </ol>
+        
         <hr>
+        </main> 
         <footer>
-            <a href="./About.html">About</a>
-            <a href="./contact.html">Contact me</a>
+            <a href="./About.html" class="in-footer">About</a>
+            <a href="./contact.html" class="in-footer">Contact me</a>
             <br>
-            <p class="copyright">&copy;ICD</p>
+            <p class="copyright">Copyright &COPY; ICD</p>
         </footer>
     </body>
 </html>
