--- a/Movie Ranking Website/Movies.html
+++ b/Movie Ranking Website/Movies.html
@@ -17,7 +17,7 @@
         <h1>Top movies of all time</h1>
     </header>
     <main>
-    <p class="description">This list is based on my taste in movie, the movies are from different genres so they won't be in any particular
+    <p class="about-page">This list is based on my taste in movie, the movies are from different genres so they won't be in any particular
         order. It obviously won't be in order because ranking them is so difficult since each movie has different
         charecteristics that could contribute to it being at the top.<br />Hope you try out a few for
         yourself.<br />LET'S GET INTO IT!!!!<br />
@@ -29,55 +29,55 @@
             <h3 class="movie-titles">The Wolf of Wall Street</h3>
         </li>
         <img src="Images/wolf.jpg" alt="Leonardo DiCaprio with his arms spread out" />
-        <p class="movie-description">Most people only know this movie because of the nudity, drugs, crazinnes and the beautiful Margot Robbie. But
+        <p class="description">Most people only know this movie because of the nudity, drugs, crazinnes and the beautiful Margot Robbie. But
             it's a really beautiful true life story about investing and going from rags to riches</p>
         <li>
             <h3 class="movie-titles">Inception</h3>
         </li>
         <img src="Images/inception.jpg" alt="Man standing facing forward with a gun in his hand" />
-        <p class="movie-description">Now this movie is AMAZING. The actors, directors, special effects and story line are all top tier. It will
+        <p class="description">Now this movie is AMAZING. The actors, directors, special effects and story line are all top tier. It will
             make you see dreams and reality
             differently.</p>
         <li>
             <h3 class="movie-titles">The Social Network</h3>
         </li><img src="Images/social.jpg" alt="Man's face" />
-        <p class="movie-description">If you want to know how Mark started with Facebook then this is the movie for you. It shows you how this man
+        <p class="description">If you want to know how Mark started with Facebook then this is the movie for you. It shows you how this man
             thought as a young man and the things he went and put other people through to build this billion dollar
             company.</p>
         <li>
             <h3 class="movie-titles">Shrek</h3>
         </li><img src="Images/shrek.jpg" alt="Shrek coming out of the toilet with a smile" />
-        <p class="movie-description">THE HUMOUR IN THESE MOVIES WAS AHEAD OF ITS TIME. I would rewatch them as many times as possible. A
+        <p class="description">THE HUMOUR IN THESE MOVIES WAS AHEAD OF ITS TIME. I would rewatch them as many times as possible. A
             different, but needed, approach to fairy tale stories. If you haven't watched them then what are you doing
             with your life.</p>
         <li>
             <h3 class="movie-titles">Transformers (the ones directed by Michael Bay)</h3>
         </li>
         <img src="Images/transformers.jpg" alt="Picture of the main characters in Transformers" />
-        <p class="movie-description">Great storyline, amazing special effects and some cool ass cars. Ahead of its time for real. My children's
+        <p class="description">Great storyline, amazing special effects and some cool ass cars. Ahead of its time for real. My children's
             children are definitely going to watch this.</p>
         <li> 
             <h3 class="movie-titles">Spider-Man</h3>
         </li><img src="Images/Spiderman.jpg" alt="Spiderman climbing on a building" />
-        <p class="movie-description">Marvel really created something beautiful here. I still have moments where I wish I was bitten by a
+        <p class="description">Marvel really created something beautiful here. I still have moments where I wish I was bitten by a
             radioactive spider and turned into your favourite neighbourhood spider. The original trilogy will forever be
             the best, but the animated spiderverse edition is a close second. Spiderman is not just for kids!!</p>
         <li>
             <h3 class="movie-titles">Creed</h3>
         </li><img src="Images/creed.jpg" alt="Creed and Rocky" />
-        <p class="movie-description">Your modern version of the Rocky movies. Extremely amazing. A great combination of actors. Makes you want to
+        <p class="description">Your modern version of the Rocky movies. Extremely amazing. A great combination of actors. Makes you want to
             start boxing lol.</p>
         <li>
             <h3 class="movie-titles">Fatherhood</h3>
         </li><img src="Images/Fatherhood.jpg" alt="Father sleeping with his daughter in her crib" />
-        <p class="movie-description">Very emotional movie about a man who had to raise his daughter on his own because his wife didn't make it
+        <p class="description">Very emotional movie about a man who had to raise his daughter on his own because his wife didn't make it
             after giving birth. So emotional that it's one of the only movies that made me cry. It is a must watch for
             sure.
         </p>
         <li>
             <h3 class="movie-titles">Avengers</h3>
         </li><img src="Images/ave.webp" alt="All the relevant heroes and villains in the avengers movies" />
-        <p class="movie-description">Best superheroe team(after the Justice League of course). The detail in each movie is amazing, all of them
+        <p class="description">Best superheroe team(after the Justice League of course). The detail in each movie is amazing, all of them
             connected leading up to an amazing end to an era. Thanos is by far the most logical villain ever, diabolical
             but with valid reasoning.But in order to really understand the series you would have to watch individual
             movies based on the members of the avengers.<br />
