--- a/Movie Ranking Website/Home.html
+++ b/Movie Ranking Website/Home.html
@@ -5,25 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RANKS</title>
-    <link rel="stylesheet" href="./stl.css"/>
+    <link rel="stylesheet" href="./stl.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1>RANKS</h1>
-    <p>Welcome to the website made for movie,series and video game junkies.<br />Here you will find lists for a variety
-        of things.<br />Just hit any of the following links and enjoy.</p>
-    <ol>
-        <li><a href="./Movies.html">Top movies</a></li>
-        <li><a href="./Series.html">Top series</a></li>
-        <li><a href="./Actors.html">Top actors and actresses</a></li>
-        <li><a href="./Games.html">Top games</a></li>
-    </ol>
-    <hr>
+    <header>
+        <h1>RANKS</h1>
+    </header>
+    <main>
+        <hr>
+        <p class="description">Welcome to the website made for movie,series and video game junkies.<br />Here you will find lists for a
+            variety
+            of things.<br />Just hit any of the following links and enjoy.</p>
+        <div id="hil1">
+            <a href="./Movies.html"><img src="./Images/movies.jpg" class="home-image-links" /></a>
+            <h2 class="hilt">Movies</h2>
+        </div>
+        <div id="hil2">
+            <a href="./Series.html"><img src="./Images/series.jpg" alt="collage of tv shows"
+                    class="home-image-links" /></a>
+            <h2 class="hilt">Series</h2>
+        </div>
+        <div id="hil3">
+            <a href="./Actors.html"><img src="./Images/actors.jpg" alt="grid with pictures of actors"
+                    class="home-image-links" /></a>
+            <h2 class="hilt">Actors & Actresses</h2>
+        </div>
+        <div id="hil4">
+            <a href="./Games.html"><img src="./Images/ps.jpeg" alt="game controller" class="home-image-links" /></a>
+            <h2 class="hilt">Games</h2>
+        </div>
+        <hr>
+    </main>
+
     <footer>
         <p>
-            &COPY;ICD
+            Copyright &COPY; ICD
         </p>
-    </footer> 
+    </footer>
 
 </body>
 
