--- a/Movie Ranking Website/Home.html
+++ b/Movie Ranking Website/Home.html
@@ -10,33 +10,31 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
 </head>
-
+ 
 <body>
     <header>
         <h1>RANKS</h1>
-    </header>
+    </header>  
     <main>
         <hr>
         <p class="description">Welcome to the website made for movie,series and video game junkies.<br />Here you will find lists for a
             variety
             of things.<br />Just hit any of the following links and enjoy.</p>
-        <div id="hil1">
+        <div id="hil1" class="hdivs">
             <a href="./Movies.html"><img src="./Images/movies.jpg" class="home-image-links" /></a>
-            <h2 class="hilt">Movies</h2>
+            <a href="./Movies.html" class="hilt"><h2 class="hilt">Movies</h2></a>
         </div>
-        <div id="hil2">
-            <a href="./Series.html"><img src="./Images/series.jpg" alt="collage of tv shows"
-                    class="home-image-links" /></a>
-            <h2 class="hilt">Series</h2>
+        <div id="hil2" class="hdivs">
+            <a href="./Series.html"><img src="./Images/series.jpg" alt="collage of tv shows" class="home-image-links" /></a>
+            <a href="./Series.html" class="hilt"><h2 class="hilt">Series</h2></a>
         </div>
-        <div id="hil3">
-            <a href="./Actors.html"><img src="./Images/actors.jpg" alt="grid with pictures of actors"
-                    class="home-image-links" /></a>
-            <h2 class="hilt">Actors & Actresses</h2>
+        <div id="hil3" class="hdivs">
+            <a href="./Actors.html"><img src="./Images/actors.jpg" alt="grid with pictures of actors" class="home-image-links" /></a>
+            <a href="./Actors.html" class="hilt"><h2 class="hilt">Actors & Actresses</h2></a>
         </div>
-        <div id="hil4">
+        <div id="hil4" class="hdivs">
             <a href="./Games.html"><img src="./Images/ps.jpeg" alt="game controller" class="home-image-links" /></a>
-            <h2 class="hilt">Games</h2>
+            <a href="./Games.html" class="hilt"><h2 class="hilt">Games</h2></a>
         </div>
         <hr>
     </main>
@@ -44,7 +42,7 @@
     <footer>
         <p>
             Copyright &COPY; ICD
-        </p>
+        </p> 
     </footer>
 
 </body>
