--- a/Movie Ranking Website/Series.html
+++ b/Movie Ranking Website/Series.html
@@ -27,7 +27,7 @@
         </p>
         <hr>
 
-        <div class="semovdivs">
+        <div class="semovdivs sedivs">
             <img src="./Images/office.jpg" alt="The cast of The Office" class="left" />
             <h3 class="titles">The Office</h3>
             <p class="description">
@@ -43,7 +43,7 @@
             </p>
         </div>
 
-        <div class="semovdivs">
+        <div class="semovdivs sedivs">
             <h3 class="titles"> Game of Thrones</h3>
             <image src="./Images/got.jpeg" alt="characters from the show" class="right" />
             <p class="description">
@@ -59,7 +59,7 @@
             </p>
         </div>
 
-        <div class="semovdivs">
+        <div class="semovdivs sedivs">
             <img src="./Images/power.jpeg" class="left" />
             <h3 class="titles">Power</h3>
             <p class="description">
@@ -67,7 +67,7 @@
             </p>
         </div>
 
-        <div class="semovdivs">
+        <div class="semovdivs sedivs">
             <h3 class="titles">Breaking Bad</h3>
             <img src="./Images/bad.jpg" alt="Jesse and Walter sitting in desert with lap gear" class="right" />
             <p class="description">
@@ -75,7 +75,7 @@
             </p>
         </div>
 
-        <div class="semovdivs">
+        <div class="semovdivs sedivs">
             <img src="./Images/db1.jpg" alt="Goku and his friends watching the tournament" class="left" />
             <h3 class="titles">Dragon Ball</h3>
             <p class="description">
@@ -83,7 +83,7 @@
             </p>
         </div>
 
-        <div class="semovdivs">
+        <div class="semovdivs sedivs">
             <h3 class="titles">How I Met Your Mother</h3>
             <img src="./Images/himym.webp" alt="People sitting at a table in a bar" class="right" />
             <p class="description">
@@ -91,7 +91,7 @@
             </p>
         </div>
 
-        <div class="semovdivs">
+        <div class="semovdivs sedivs">
             <img src="./Images/mco.webp" alt="Marco Polo standing beside Kublai Khan" class="left" />
             <h3 class="titles">Marco Polo</h3>
             <p class=" description">
@@ -99,7 +99,7 @@
             </p>
         </div>
 
-        <div class="semovdivs">
+        <div class="semovdivs sedivs">
             <h3 class="titles">Black Monday</h3>
             <img src="./Images/bm.jpg" alt="Main characters from the show" class="right" />
             <p class="description">
@@ -107,7 +107,7 @@
             </p>
         </div>
 
-        <div class="semovdivs">
+        <div class="semovdivs sedivs">
             <img src="./Images/snow.avif" class="left" />
             <h3 class="titles">Snowfall</h3>
             <p class="description">
@@ -115,7 +115,7 @@
             </p>
         </div>
 
-        <div class="semovdivs">
+        <div class="semovdivs sedivs">
             <h3 class="titles">Gotham</h3>
             <img src="./Images/gotham.webp" class="right" />
             <p class="description">
@@ -123,7 +123,7 @@
             </p>
         </div>
 
-        <div class="semovdivs">
+        <div class="semovdivs sedivs">
             <img src="./Images/advent.jpeg" alt="Cartoon characters" class="left" />
             <h3 class="titles">Adventure Time</h3>
             <p class="description">
@@ -131,7 +131,7 @@
             </p>
         </div>
 
-        <div class="semovdivs">
+        <div class="semovdivs sedivs">
             <h3 class="titles">The Punisher</h3>
             <img src="./Images/punish.jpeg" class="right" />
             <p class="description">
@@ -139,7 +139,7 @@
             </p>
         </div>
 
-        <div class="semovdivs">
+        <div class="semovdivs sedivs">
             <img src="./Images/arrow.jpg" class="left" />
             <h3 class="titles">Arrow</h3>
             <p class="description">
@@ -147,7 +147,7 @@
             </p>
         </div>
 
-        <div class="semovdivs">
+        <div class="semovdivs sedivs">
             <h3 class="titles">Archer</h3>
             <img src="./Images/arch.jpg" alt="Archer and Lana" class="right" />
             <p class="description">
