--- a/Port/index.html
+++ b/Port/index.html
@@ -19,12 +19,12 @@
                 <li><h2 class="main"><a href="./Movie Ranking Website/Home.html">Ranking Website</a></h2></li>
                 <p class="main">
                 This is one of my first ever project.<br /> The process of making this was both fun and difficult.<br />
-                <a href="./Movie Ranking Website/Home.html"><img src="./images/Screenshot 2024-01-20 231340.png" width="300"/></a>
+                <a href="./Movie Ranking Website/Home.html"><img src="../images/Screenshot 2024-01-20 231340.png" width="300"/></a>
                 </p>
                 <li><h2 class="main"><a href="./Birthday Invite.html">Birthday Invite</a></h2></li>
                 <p class="main">
                     Just a basic invite page. We all love birthday parties.<br />
-                    <a href="./Birthday Invite.html"><img src="./images/Screenshot 2024-01-04 145942.png" width="300" /></a>
+                    <a href="./Birthday Invite.html"><img src="../images/Screenshot 2024-01-04 145942.png" width="300" /></a>
                 </p>
             </ol>
         
